0.6.0 (currently working on)
- [#1833] Fix: private -> protected in pi2 (XCLASSING issue), patch by Stefan Galinski
- [#1771] Updated Dutch translation, thanks to Kees van der Hall
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1790] Fix: Option boxes for event types: Type "Workshop" loses the selection after submitting
- [#1758] Fix: HTML validation errors in the list view option boxes
- [#811] Feature: Add, edit, list functionality like the be_groups field in the be_user dialog, patch by Stefan Galinski
- [#1774] Updated Russion translation, thanks to Irina Kuznecova
- [#1770] Updated Italian translation, thanks to Mauro Lorenzutti
- [#1769] Updated French translation, thanks to Francois Suter
- [#1768] Updated Danish translation, thanks to Lars Dyhr
- [#1767] Fix: Catchable fatal error without events in list view
- [#1737] Fix: In mod2, topics and dates have the "single event" icon
- [#1443] Fix: omitDateIfSameAsPrevious does not work
- [#1739] Fix: template.php imported twice
- [#536] Change: Use the speakerbag for iterating over speakers
- [#537] Change: Use the organizerbag for iterating over organizers
- [#1569] Feature: Link the categories in the list view to the list view page, filtered by the category
- [#1406] Feature: Add a switch to always sort the list view by category
- [#1616] Change: Add a conflict with DBAL and mention this in the manual
- [#1407] Feature: Allow filtering the list view by categories
- [#1581] Feature: Allow to set time-frames for seminar bag builders
- [#1730] Change: Make the teaser field an RTE field
- [#1662] Change: Test the bag builder with an empty string for the source pages (with 0 and > 0 for recursion)
- [#1626] Fix: MySQL error in countdown view
- [#1656] Fix: Label "language" is not removed from single view if no language is defined
- [#1666] Fix: CSV export of events is broken
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2